Adding backgroud image

--- a/templates/form.html
+++ b/templates/form.html
@@ -2,14 +2,14 @@
     <head>
         <title>Ethnicity</title>
     </head>
-    <body>
+    <body background="http://brittahoward.edublogs.org/files/2008/04/races2.jpg">
         <div id="container">
             <div class="title">
-                <h1>Let me guess your Ethnicity! Your last name please!</h1>
+                <h1><font color="white">Let me guess your Ethnicity!</font></h1>
             </div>
             <div id="content">
                 <form method="post" action="">
-                  <label for="lastname">Please enter your last name:</label>
+                  <label for="lastname"><font color="white">Please enter your last name:</font></label>
                   <input type="text" name="lastname" /><br />
                   <input type="submit" />
                 </form>
