--- a/templates/result.html
+++ b/templates/result.html
@@ -2,10 +2,10 @@
     <head>
         <title>Ethnicity</title>
     </head>
-    <body>
+    <body background="http://brittahoward.edublogs.org/files/2008/04/races2.jpg">
         <div id="container">
             <div class="title">
-                <h3>So our experts ran simulations in the lab. You are {{ethnicity}} with a probability of {{probability}}</h3>
+                <h3><font color="white">So our experts ran simulations in the lab. You are {{ethnicity}} with a probability of {{probability}}</font></h3>
             </div>
         </div>
     </body>
