--- a/templates/form.html
+++ b/templates/form.html
@@ -2,8 +2,13 @@
     <head>
         <title>Ethnicity</title>
     </head>
-    <body background="http://brittahoward.edublogs.org/files/2008/04/races2.jpg">
-        <div id="container">
+    <style>
+      body {
+          background: url("../static/races.jpg") repeat;
+      }
+    </style>
+    <body>
+        <div id="container" align="center">
             <div class="title">
                 <h1><font color="white">Let me guess your Ethnicity!</font></h1>
             </div>
