--- a/templates/result.html
+++ b/templates/result.html
@@ -2,8 +2,13 @@
     <head>
         <title>Ethnicity</title>
     </head>
-    <body background="http://brittahoward.edublogs.org/files/2008/04/races2.jpg">
-        <div id="container">
+    <style>
+      body {
+          background: url("../static/races.jpg") repeat;
+      }
+    </style>
+    <body>
+        <div id="container" align="center">
             <div class="title">
                 <h3><font color="white">So our experts ran simulations in the lab. You are {{ethnicity}} with a probability of {{probability}}</font></h3>
             </div>
